# Signature-Sigma

./: Cargo.toml  README.md
.claude/: settings.local.json
docs/superpowers/plans/: 2026-03-14-sigma-bbs-protocol.md
src/: bbs.rs  commitment.rs  errors.rs  hash.rs  lib.rs  params.rs  proof.rs  prover.rs  verifier.rs
tests/: integration.rs
